--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,10 @@ th, td {
     border-bottom: 1px solid #000;
 }
 
+th a {
+    font-weight: 100;
+}
+
 td {
     font-size: medium;
     font-weight: 500;
@@ -46,4 +50,8 @@ p {
     text-align: right;
     font-size: small;
     margin-top: 20px;
+}
+
+p a {
+    text-decoration: none;
 }
