--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin: 0 auto;
+    width: auto;
     max-width: 80%;
     border-radius: 10px;
     margin-top: 5%;
