--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,12 @@ h1 {
 }
 
 table {
-    width: 100%;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
     border-collapse: collapse;
+    
 }
 
 th, td {
