--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,8 @@ h1 {
 
 table {
     margin: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: auto;
+    width: 100%;
     border-collapse: collapse;
-    
 }
 
 th, td {
